# LiarsDice

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
dice/: __main__.py  main.py
dice/lib/: game.py  gameinterface.py
docs/: rules.txt
tests/: dice_test.py
