[metadata]
name = dice
version = attr: dice.__version__
description = dice
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = DigiDuncan
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/DigiDuncan/dice
    Tracker=https://github.com/DigiDuncan/dice/issues

[options]
packages = find:
python_requires = >=3.10
zip_safe = yes
include_package_data = True
install_requires =
    rich==12.4.4
    scipy==1.8.1

[options.extras_require]
dev =
    pytest==7.1.2
    flake8==4.0.1
    autopep8==1.6.0

[options.entry_points]
console_scripts =
    dice = dice.main:main

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
